gcc/testsuite/gdc.test/runnable/imports/test29b.d
module imports.test29b;

const int qwert = 42;
