gcc/testsuite/gdc.test/fail_compilation/imports/test143.d
module imports.test143;

package int x = 5;
